src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply h-screen bg-background text-foreground;
  }
}

* {
  scrollbar-width: thin;
}
html {
  /* scrollbar-gutter: stable; */ /* takes into acount the space taken by scrollbar gutters and fix layout shift issues */
  scroll-behavior: smooth;
}
body {
  transform: perspective(1000px);
}

.add-percentage .tooltip-value::after {
  content: "%";
}

.get-started {
  transition:
    background-color 0.3s,
    transform 0.3s;
}

.get-started:hover {
  background-color: red;
  transform: scale(1.4, 1.2);
}

.get-started:hover > span {
  animation: shake 0.1s 0.3s linear both 3;
  /* transform: rotate(45deg); */
}

.sign-up:hover > span {
  animation: slide-up-and-down 0.3s linear both;
}

.animate-grid {
  transition: grid-template-rows 0.5s;
}

.text-animate {
  animation: text-animation 6.2s linear;
  animation-delay: 4.2s;
  animation-iteration-count: infinite;
}

.mount-image {
  animation: slide-up-left 0.9s linear both;
}

[data-open="mounted"] .mount-text-animate {
  animation: text-animation 1.2s 1s linear both;
}

.animate-header {
  transition: transform 0.2s linear;
}

.mounted-wrapper[data-open="closed"] p {
  display: none;
}

nav > a {
  position: relative;
}

nav > a::before {
  content: "";
  position: absolute;
  bottom: -3px;
  left: 0;
  width: 100%;
  height: 1px;
  background: black;
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.3s;
}

nav > a:hover::before {
  transform: scaleX(1);
}

.taskInfo-md [data-radix-scroll-area-content] {
  @apply md:flex md:gap-3;
}

.gradient-background {
  background: rgb(58, 179, 180);
  background: linear-gradient(
    137deg,
    rgba(58, 179, 180, 1) 0%,
    rgba(109, 126, 208, 1) 17%,
    rgba(224, 91, 105, 1) 27%,
    rgba(194, 29, 253, 1) 45%,
    rgba(29, 101, 253, 1) 60%,
    rgba(134, 29, 253, 1) 73%,
    rgba(253, 29, 60, 1) 83%
  );
}

.rotate-card {
  transform-style: preserve-3d;
  transition: transform 0.5s linear;
}

.back-side {
  transform: rotateY(180deg);
}

.rotate-card:hover {
  transform: rotateY(180deg);
}

.card {
  @apply w-1/3 lg:w-1/4;
  height: 31.25rem;
  position: relative;
  transform: rotateY(0deg);
  transform-style: preserve-3d;
  transition: transform 0.5s linear;
}

.card:hover {
  transform: rotateY(180deg);
}

.side {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.back-side {
  transform: rotateY(180deg);
}

.break {
  white-space: pre-wrap;
}

.spinner_ajPY {
  transform-origin: center;
  animation: spinner_AtaB 0.75s infinite linear;
}
@keyframes spinner_AtaB {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes shake {
  from,
  to {
    transform: none;
  }
  25% {
    transform: rotate(18deg);
  }
  50% {
    transform: rotate(-18deg);
  }
}

@keyframes slide-up-and-down {
  from,
  to {
    transform: none;
  }
  50% {
    transform: translateY(-60px);
    opacity: 0;
  }
  75% {
    transform: translateY(60px);
  }
}

@keyframes text-animation {
  from {
    clip-path: polygon(0% 0%, 0% 0%, 0 100%, 0% 100%);
  }

  30%,
  to {
    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
  }
}

@keyframes slide-up-left {
  from {
    transform: translateY(100px);
    opacity: 0;
  }
  50% {
    transform: none;
    opacity: 1;
  }
  to {
    transform: none;
  }
}

@keyframes move-left {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

@keyframes move-right {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(100%);
  }
}

code {
  @apply text-wrap;
}

.markdown a {
  color: rgb(140, 28, 219);
  text-decoration: underline;
}

